[package]
name = "blocking_tests"
version = "0.1.0"
authors = ["serzhiio <serzh@ecktoff.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-utils = "0.1.0-alpha.4"
futures = "0.3.1"
crossbeam = "0.7.3"
async-task = "1.3.0"
tokio = { version = "0.2" }
async-std = "1.4.0"
lightproc = "0.3.4"
bastion-executor = "0.3.4"

[dev-dependencies]